# spork

./: CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: publish.yml
bench/: causal_gqa.py  matmul.py  matmul_oneshot.py
src/spork/: __init__.py  codegen.py  dtypes.py  ir.py  jit.py  runtime.py  tracer.py  types.py
src/spork/kernels/: __init__.py  causal_gqa.py  matmul.py  matmul_oneshot.py  matrix_add.py
src/spork/verified/: __init__.py  _backend.py  _coverage.py  jit.py  primitives.py
src/spork/verified/kernels/: __init__.py  attention.py  matmul.py
tests/: test_kernels.py  test_matmul_simd.py  test_matmul_simple.py  test_matmul_tiled.py  test_spork.py  test_verified.py
